Configure maven-failsafe-plugin